<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/texttheme"
    tools:context=".LoginActivity"
    >

    <TextView
        android:id="@+id/login_register_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="200dp"
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="Login"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/loginText"
        android:id="@+id/til_login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@color/green"
        android:textColorHint="@color/green"
        android:textStyle="bold"
        android:textSize="17sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tedit_login_phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"/>

    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_passaword_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_login_phone_number_input"
        app:passwordToggleEnabled="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:textColorHint="@color/green"
        android:textSize="17sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/tedit_login_password_input"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/login_phone_number_input"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:layout_marginTop="6dp"-->
<!--        android:background="@drawable/input_design"-->
<!--        android:hint="@string/password"-->
<!--        android:inputType="textPassword"-->
<!--        android:padding="20dp"-->
<!--        android:textColor="@color/MyColor"-->
<!--        android:textColorHint="@color/green"-->
<!--        android:textSize="17sp"-->
<!--        android:textStyle="bold"-->
<!--        />-->


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/til_login_passaword_input"
        android:layout_marginTop="5dp"
        >
       <com.rey.material.widget.CheckBox
           android:id="@+id/remember_me_chkb"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           style="@style/Material.Drawable.CheckBox"
           android:text="@string/login_remember_me"
           android:textColor="@color/green"
           app:cbd_strokeColor="@color/green"
           android:gravity="center_vertical"
           android:textSize="16sp"
           android:textStyle="bold"
           android:layout_marginStart="30dp"
           />

        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="80dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/green"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_panel_link"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_admin_panel_link"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        />

</RelativeLayout>